# connect4-realtime-prototype

./: .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cdk.json  docker-compose.yml  entrypoint.sh  pyproject.toml  setup.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: audit.py  connection_manager.py  database.py  db_models.py  game.py  main.py  models.py  repository.py  store.py  websocket.py
app/routes/: __init__.py  games.py  matchmaking.py  players.py
docs/: AWS_DEPLOYMENT.md  TECHNICAL_DECISIONS.md
infra/: app.py  requirements.txt  stack.py
static/: app.js  index.html  style.css
tests/: conftest.py
tests/e2e/: conftest.py  test_game_lobby.py  test_gameplay.py  test_lobby.py  test_navigation.py  test_replay.py
tests/integration/: test_api.py  test_concurrent_moves.py  test_integration.py  test_matchmaking.py  test_presence_and_stale_games.py  test_websocket_persistence.py
tests/unit/: test_audit.py  test_connection_manager.py  test_elo_and_stats.py  test_game.py  test_game_hypothesis.py  test_models.py  test_store.py
