[build-system]
requires = ["setuptools>=82.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-realtime-prototype"
version = "1.0.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.133.0",
    "pydantic>=2.12.0",
    "redis>=7.2.0",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "anyio[trio]>=4.12.0",
    "httpx>=0.28.0",
    "hypothesis>=6.0.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "pytest-anyio>=0.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.15.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "BLE", "C4", "RET", "SIM"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
